<resources>
    <string name="app_name">Точка</string>
    <string name="home">Главная</string>
    <string name="magazine">Магазины</string>
    <string name="catalogue">Каталог</string>
    <string name="account">Акаунт</string>
    <string name="contacts">Контакты</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
