<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shopMainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_geo"
        android:title="@string/magazine"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/catalogFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_products"
        android:title="@string/catalogue"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accountFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/contactsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_action_phone"
        android:title="@string/contacts"
        app:showAsAction="ifRoom" />

</menu>